# spectral-peaks-vst-plugin

./: .gitignore  README.md
SpectralPeaks/: CMakeLists.txt
SpectralPeaks/Source/: PluginProcessor.cpp  SpectralPeaksAudioProcessor.cpp  SpectralPeaksAudioProcessor.h  SpectralPeaksAudioProcessorEditor.cpp  SpectralPeaksAudioProcessorEditor.h
